--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /graphql-mongo-server/yarn.lock
 /graphql-mongo-server/package-lock.json
 /graphql-mongo-server/node_modules/
+/mongo-graphql-project/node_modules/
